fix alignment for nav-bar

--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ header {
     z-index: 1;
     display: flex;
     justify-content: center;
-    align-items: center;
     min-height: 80px;
     width: 100%;
     overflow: hidden;
@@ -107,6 +106,7 @@ nav a.active {
 @media screen and (max-width: 1000px) {
     .nav-bar.responsive {
         position: fixed;
+        align-items: flex-start;
     }
     .nav-bar.responsive .icon {
         position: absolute;
